Safari365 Prod/src/objects/ExchangeRates__c.object
<CustomObject>
    <fields>
        <fullName>AED__c</fullName>
        <label>AED</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG__c</fullName>
        <label>ANG</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARS__c</fullName>
        <label>ARS</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUD__c</fullName>
        <label>AUD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_Credit_Card_Markup__c</fullName>
        <formula>$CustomMetadata.Credit_Card_Markup__mdt.Credit_Card_Markup_BRL.Markup_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRL Credit Card Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL__c</fullName>
        <label>BRL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseCurrency__c</fullName>
        <label>BaseCurrency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <label>CAD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHF__c</fullName>
        <label>CHF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLP__c</fullName>
        <label>CLP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNY__c</fullName>
        <label>CNY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DKK__c</fullName>
        <label>DKK</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <label>EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExchangeRateDate__c</fullName>
        <label>ExchangeRateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <label>GBP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HKD__c</fullName>
        <label>HKD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILS__c</fullName>
        <label>ILS</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYR__c</fullName>
        <label>MYR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NZD__c</fullName>
        <label>NZD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEN__c</fullName>
        <label>PEN</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUB__c</fullName>
        <label>RUB</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEK__c</fullName>
        <label>SEK</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGD__c</fullName>
        <label>SGD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <label>USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZAR__c</fullName>
        <label>ZAR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>ExchangeRate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BaseCurrency__c</columns>
        <columns>ExchangeRateDate__c</columns>
        <columns>USD__c</columns>
        <columns>EUR__c</columns>
        <columns>GBP__c</columns>
        <columns>AUD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000000}</displayFormat>
        <label>ExchangeRates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExchangeRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>